<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include android:id="@+id/um_toolbar" layout="@layout/toolbar"/>

    <FrameLayout
        android:id="@+id/attendance_fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >


    </FrameLayout>
    
</LinearLayout>